# rgbm

./: .pre-commit-config.yaml  .readthedocs.yaml  Cargo.toml  LICENSE
.github/workflows/: format.yml  test.yml
crates/rgbm/: Cargo.toml  README.md
crates/rgbm-python/: Cargo.toml  README.md  pyproject.toml
crates/rgbm-python/python/rgbm/: __init__.py
crates/rgbm-python/src/: lib.rs
crates/rgbm/src/: bin.rs  booster.rs  dataset.rs  histogram.rs  lib.rs  objective.rs  parameters.rs  serialization.rs  tree.rs  utils.rs
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt
docs/examples/: french_motor_3rd_party_liabilities.ipynb
tests/python/: test_basic.py  test_engine.py  test_lgbm_compat.py
