[workspace]
members = [
    "crates/rgbm",
    "crates/rgbm-python",
]
resolver = "2"

[workspace.lints.clippy]
# Stylistic lints we don't care to chase across the codebase.
too_many_arguments = "allow"     # tree fitters legitimately share lots of workspace state
needless_range_loop = "allow"    # explicit indexing reads more clearly in hot histogram loops

[workspace.dependencies]
arrow = { version = "54" }
rayon = "1.10"
rand = "0.8"
ahash = "0.8"
libm = "0.2"
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py311"] }
numpy = "0.23"
