[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rgbm"
version = "0.1.0"
description = "A fast and lean Gradient Boosting Machine."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [{name = "Malte Londschien"}]
dependencies = [
    "numpy>=1.23",
    "pyarrow>=14.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "rgbm._core"
python-source = "python"
